stream_url and image_url on create and update now only receive string instead of a file
